<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inb1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:padding="5dp">


            <ImageView
                android:id="@+id/imgCat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/inb1"
                android:adjustViewBounds="true"/>


            <TextView
                android:layout_toRightOf="@id/imgCat"
                android:textSize="16sp"
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forum"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="15dp" />

        </RelativeLayout>

    <View
        android:id="@+id/v1"
        android:layout_below="@+id/inb1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorGrey"
        />



        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inb2"
            android:layout_below="@id/v1"
            android:padding="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">


            <ImageView
                android:id="@+id/imgCatt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/inb2"
                android:adjustViewBounds="true"/>


            <TextView
                android:layout_toRightOf="@id/imgCatt"
                android:textSize="16sp"
                android:id="@+id/txtTitlee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diskusi_produk"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="15dp" />

        </RelativeLayout>

    <View
        android:id="@+id/v2"
        android:layout_below="@id/inb2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorGrey"
        />


    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inb3"
            android:layout_below="@id/inb2"
            android:padding="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true">


            <ImageView
                android:id="@+id/imgCattt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/inb3"
                android:adjustViewBounds="true"/>


            <TextView
                android:layout_toRightOf="@id/imgCattt"
                android:textSize="16sp"
                android:id="@+id/txtTitleee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bot"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_margin="15dp" />

        </RelativeLayout>

    <View
        android:id="@+id/v3"
        android:layout_below="@+id/inb3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorGrey"
        />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inb4"
        android:layout_below="@id/inb3"
        android:padding="5dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true">


        <ImageView
            android:id="@+id/imgCatttt"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/inb4"
            android:adjustViewBounds="true"/>


        <TextView
            android:layout_toRightOf="@id/imgCatttt"
            android:textSize="16sp"
            android:id="@+id/txtTitleeee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bantuan"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="15dp" />

    </RelativeLayout>

    <View
        android:id="@+id/v4"
        android:layout_below="@+id/inb4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorGrey"
        />





</RelativeLayout>